# cookie-split

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh  clean.sh  run-test.sh
src/: CMakeLists.txt  cookie_split.c  cookie_split.h  main.c
src/test/: CMakeLists.txt  testCookieSplit.cc
